--- a/env.yml
+++ b/env.yml
@@ -1,14 +1,17 @@
 default_env: &default_env
-  SLACK_HOOK: https://hooks.slack.com/services/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
+  SLACK_BOT_NAME: Account Reaper
+  SLACK_BOT_EMOJI: ':randy-loud:'
 
 test:
   <<: *default_env
-  SSM_PARAM_NAME: 'marked_accounts_test'
+  SSM_PARAM_NAME: marked_accounts_test
+  SLACK_CHANNEL_NAME: '#slack-hook-test'
+  SLACK_CHANNEL_ID: CGHB8N40H
 
 dev:
   <<: *default_env
-  SSM_PARAM_NAME: 'marked_accounts_dev'
+  SSM_PARAM_NAME: marked_accounts_dev
 
 prod:
   <<: *default_env
-  SSM_PARAM_NAME: 'marked_accounts'
+  SSM_PARAM_NAME: marked_accounts
