--- a/aws/package.json
+++ b/aws/package.json
@@ -18,10 +18,9 @@
   "author": "Amit Sharma, amit.sharma@mechanicalrock.io",
   "license": "MIT",
   "dependencies": {
-    "@aws-cdk/aws-codebuild": "^0.24.1",
-    "@aws-cdk/aws-codepipeline": "^0.24.1",
     "@aws-cdk/cdk": "^0.24.1",
-    "@types/node": "^10.12.18"
+    "@types/node": "^10.12.18",
+    "cdk-constructs": "0.0.4"
   },
   "devDependencies": {
     "@types/fs-extra": "^5.0.4",
