--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "skynet",
+  "name": "account-reaper",
   "version": "1.0.0",
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
   "scripts": {
-    "test": "jest --coverage --verbose"
+    "test": "jest --coverage --verbose",
+    "integration-tests": "jest --verbose ./test/integration/",
+    "acceptance-tests": "jest --verbose ./test/**/*.test.ts"
   },
   "dependencies": {
     "bluebird": "^3.5.3",
     "fast-json-stable-stringify": "^2.0.0",
-    "lodash.unionby": "^4.8.0"
+    "lodash.unionby": "^4.8.0",
+    "node-fetch": "^2.3.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
@@ -19,9 +22,12 @@
     "@types/node": "^8.0.57",
     "@types/node-fetch": "^2.1.6",
     "aws-sdk": "^2.401.0",
+    "aws-xray-mock": "0.0.5",
     "aws-xray-sdk": "^2.2.0",
     "jest": "^24.1.0",
     "jest-cucumber": "^2.0.5",
+    "serverless-secrets": "^3.0.0-beta.12",
+    "serverless-step-functions": "^1.13.0",
     "serverless-webpack": "^5.1.1",
     "source-map-support": "^0.5.6",
     "ts-jest": "^24.0.0",
